recursion.lessons.recursion.koch.PentaKoch.scala.error
PentaKoch:24: error: not found: value pentaKoch
		pentaKoch(getParam(0).asInstanceOf[Int],getParam(1).asInstanceOf[Double]);
                ^