recursion.lessons.recursion.koch.PentaKoch.scala.code

def pentaSide(levels:Int, length:Double){
if(levels==0)
{avance(length);}
else{
pentaSide(levels-1,length/3);
gauche(108);
pentaSide(levels-1,length/3);
droite(72);
pentaSide(levels-1,length/3);
droite(72);
pentaSide(levels-1,length/3);
droite(72);
pentaSide(levels-1,length/3);
gauche(108);
pentaSide(levels-1,length/3);
}
}
